fix element bleed through

--- a/static/_music.scss
+++ b/static/_music.scss
@@ -27,7 +27,7 @@ td p a {
 }
 
 .white {
-  z-index: 1;
+  z-index: 5;
   position: fixed;
   margin: auto;
   white-space: nowrap;
